may to might style fix

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -30,7 +30,7 @@ This release fixes the following issues:
 This release has the following issue:
 
 * When saving the MySQL Settings page with Azure-style usernames (for example, `userId@serverName`),
-  you may see an error message saying use of the  `@` character is not supported. Disregard this message. You are still able to authenticate. 
+  you might see an error message saying use of the  `@` character is not supported. Disregard this message. You are still able to authenticate. 
 
 ##<a id="ver-1-2-3"></a> v1.2.3
 
