--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -6,7 +6,7 @@ owner: PCF Event Alerts
 
 **Release Date: October 4, 2018**
 
-### <a id="features123"></a> Features
+### <a id="features125"></a> Features
 
 Change in this release:
 
@@ -15,7 +15,7 @@ Change in this release:
      `cflinuxfs2` is used when PCF Event Alerts is installed on an environment that does not have `cflinuxfs3`,
       for example, a PCF v2.2 environment.
 
-### <a id="fixed123"></a> Fixed Issues
+### <a id="fixed125"></a> Fixed Issues
 
 This release fixes the following issues:
 
@@ -25,7 +25,7 @@ This release fixes the following issues:
 * This version of PCF Event Alerts supports using BOSH DNS in conjunction
   with the IPsec Add-on for PCF when using an internal database.
 
-### <a id="known123"></a> Known Issues
+### <a id="known125"></a> Known Issues
 
 This release has the following issue:
 
@@ -40,8 +40,7 @@ This release has the following issue:
 
 New features and changes in this release:
 
-* SMTP verification is no longer required.
-  To skip SMTP verification, bypass that step in the setup process. 
+* Added support for SMTP servers without auth. Credentials are no longer required when configuring SMTP server settings.
 
 * Escape characters are no longer required in configuration passwords. 
 
