Add release notes for 1.2.6
Signed-off-by: Jeremy Alvis <jalvis@pivotal.io>

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -2,6 +2,19 @@
 title: Release Notes for PCF Event Alerts
 owner: PCF Event Alerts
 ---
+##<a id="ver-1-2-6"></a> v1.2.6
+
+**Release Date: December 7, 2018**
+
+### <a id="features126"></a> Features
+
+New features and changes in this release:
+
+* Maintenance update of the following product dependencies:
+    * Flyway Command-line is now v5.2.1
+    * Golang is now v1.11
+    * CF CLI is now v6.40.1
+
 ##<a id="ver-1-2-5"></a> v1.2.5
 
 **Release Date: October 4, 2018**
@@ -45,7 +58,7 @@ New features and changes in this release:
 * Escape characters are no longer required in configuration passwords. 
 
 * Maintenance update of the following product dependencies:
-    * Flyway Command-line is now v.5.1.4
+    * Flyway Command-line is now v5.1.4
     * Golang is now v1.10.3
     * Product stemcell is now Ubuntu Xenial v97.x
 
