repeats the known issue in 1.2.6

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -15,6 +15,13 @@ New features and changes in this release:
     * Golang is now v1.11
     * CF CLI is now v6.40.1
 
+### <a id="known126"></a> Known Issues
+
+This release has the following issue:
+
+* When saving the MySQL Settings page with Azure-style usernames (for example, `userId@serverName`),
+  you might see an error message saying use of the  `@` character is not supported. Disregard this message. You are still able to authenticate. 
+
 ##<a id="ver-1-2-5"></a> v1.2.5
 
 **Release Date: October 4, 2018**
