tidy snapshot and rel notes for next release[#162677003]

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -7,9 +7,9 @@ These are release notes for PCF Event Alerts.
 
 ##<a id="ver-1-1-7"></a> v1.1.7
 
-**Release Date:** December 14, 2018
+**Release Date:** December 19, 2018
 
-### <a id="features116"></a> Features
+### <a id="features117"></a> Features
 
 New features and changes in this release:
 
@@ -20,7 +20,10 @@ New features and changes in this release:
 
 ### <a id="known116"></a> Known Issues
 
-* **[Known Issue]** When saving the MySQL settings page with Azure style usernames (for example, 'userId@serverName), you may see an error message due to non-support of the `@` character. You can ignore this message and successfully authenticate.
+* **[Known Issue]** When saving the MySQL settings page with Azure-style usernames, for example,
+    `userId@serverName`, you might see an error message saying use of the `@` character is not supported.
+    Disregard this message.
+    You are still able to authenticate. 
 
 
 ##<a id="ver-1-1-6"></a> v1.1.6
@@ -39,7 +42,10 @@ New features and changes in this release:
 
 ### <a id="known116"></a> Known Issues
 
-* **[Known Issue]** When saving the MySQL settings page with Azure style usernames (for example, 'userId@serverName), you may see an error message due to non-support of the `@` character. You can ignore this message and successfully authenticate.
+* **[Known Issue]** When saving the MySQL settings page with Azure-style usernames, for example,
+    `userId@serverName`, you might see an error message saying use of the `@` character is not supported.
+    Disregard this message.
+    You are still able to authenticate. 
 
 ##<a id="ver-1-1-5"></a> v1.1.5
 
