--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -39,23 +39,23 @@ The following table provides version and version-support information about PCF E
     <th>Details</th>
     <tr>
         <td>Tile version</td>
-        <td>v1.1.4</td>
+        <td>1.1.7</td>
     </tr>
     <tr>
         <td>Release date</td>
-        <td>June 5, 2018</td>
+        <td>December 19, 2018</td>
     </tr>
     <tr>
         <td>Compatible Ops Manager version(s)</td>
-        <td>v2.1.x</td>
+        <td>2.2 and 2.1</td>
     </tr>
     <tr>
         <td>Compatible Pivotal Application Service (PAS) version(s)</td>
-        <td>v2.1.x</td>
+        <td>2.2 and 2.1</td>
     </tr>
     <tr>
         <td>Compatible Pivotal Cloud Foundry Healthwatch version(s)</td>
-        <td>v1.2.x</td>
+        <td>1.2</td>
     <tr>
         <td>IaaS support</td>
         <td>AWS, Azure, GCP, OpenStack, and vSphere</td>
