--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -19,8 +19,10 @@ New features and changes in this release:
 
 This release has the following issue:
 
-* When saving the MySQL Settings page with Azure-style usernames (for example, `userId@serverName`),
-  you might see an error message saying use of the  `@` character is not supported. Disregard this message. You are still able to authenticate. 
+* When saving the MySQL settings page with Azure-style usernames, for example,
+  `userId@serverName`, you might see an error message saying use of the `@` character is not supported.
+  Disregard this message.
+  You are still able to authenticate. 
 
 ##<a id="ver-1-2-5"></a> v1.2.5
 
@@ -49,8 +51,10 @@ This release fixes the following issues:
 
 This release has the following issue:
 
-* When saving the MySQL Settings page with Azure-style usernames (for example, `userId@serverName`),
-  you might see an error message saying use of the  `@` character is not supported. Disregard this message. You are still able to authenticate. 
+* When saving the MySQL settings page with Azure-style usernames, for example,
+  `userId@serverName`, you might see an error message saying use of the `@` character is not supported.
+  Disregard this message.
+  You are still able to authenticate. 
 
 ##<a id="ver-1-2-3"></a> v1.2.3
 
@@ -85,9 +89,10 @@ This release fixes the following issue:
 
 This release has the following issue:
 
-* When saving the MySQL settings page with Azure style usernames (for example, `userId@serverName`),
-  you might see an error message due to non-support of the `@` character.
-  You can ignore this message and successfully authenticate.
+* When saving the MySQL settings page with Azure-style usernames, for example,
+  `userId@serverName`, you might see an error message saying use of the `@` character is not supported.
+  Disregard this message.
+  You are still able to authenticate.
 * When using PCF Event Alerts and BOSH DNS in conjunction with IPSec Add-On for PCF and an internal database, PCF Event Alerts will not function. This issue is fixed in PCF Event Alerts v1.2.5.
 * The tile version in the tile metadata may not match the version of PCF Event Alerts. These version numbers are aligned as of PCF Event Alerts 1.2.5.
 
@@ -119,7 +124,7 @@ This release has the following issues:
 
 * When using an external Azure MySQL database or other databases 
   where usernames contain the `@` symbol, authentication does not work.
-  This issue is fixed in PCF Event Alerts v1.1.6.
+  This issue is fixed in PCF Event Alerts v1.2.1.
 * When using PCF Event Alerts and BOSH DNS in conjunction with IPSec Add-On for PCF and an internal database, PCF Event Alerts will not function. This issue is fixed in PCF Event Alerts v1.2.5.
 * The tile version in the tile metadata may not match the version of PCF Event Alerts. These version numbers are aligned as of PCF Event Alerts 1.2.5.
 
