--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -15,15 +15,15 @@ New features and changes in this release:
 
 * Maintenance update of the following product dependencies:
     * Flyway Command-line now v5.2.4
-    * Golang now v1.11
-    * cf-cli now 6.41.0
+    * golang now v1.11
+    * cf CLI now v6.41.0
 
-### <a id="known116"></a> Known Issues
+### <a id="known117"></a> Known Issues
 
 * **[Known Issue]** When saving the MySQL settings page with Azure-style usernames, for example,
-    `userId@serverName`, you might see an error message saying use of the `@` character is not supported.
+    `userId@serverName`, you might see an error message saying that the use of the `@` character is not supported.
     Disregard this message.
-    You are still able to authenticate. 
+    You are still able to authenticate.
 
 
 ##<a id="ver-1-1-6"></a> v1.1.6
@@ -37,15 +37,15 @@ New features and changes in this release:
 * Adds support for external Azure MySQL databases and other cases where usernames contain the '@' symbol
 * Maintenance update of the following product dependencies:
     * Flyway Command-line now v5.1.4
-    * Golang now v1.10.3
+    * golang now v1.10.3
     * Product stemcell now v3541
 
 ### <a id="known116"></a> Known Issues
 
 * **[Known Issue]** When saving the MySQL settings page with Azure-style usernames, for example,
-    `userId@serverName`, you might see an error message saying use of the `@` character is not supported.
+    `userId@serverName`, you might see an error message saying that the use of the `@` character is not supported.
     Disregard this message.
-    You are still able to authenticate. 
+    You are still able to authenticate.
 
 ##<a id="ver-1-1-5"></a> v1.1.5
 
