--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -14,6 +14,7 @@ You must have the following in order to install PCF Event Alerts:
   + `Email Notifications` enabled with SMTP server configured.
   + `Notifications Errand` and `Notifications UI Errand` run.
 + MySQL for PCF v2.0 or later, or external MySQL credentials
+  + Note: MariaDB is not currently supported due to [it not being able](https://jira.mariadb.org/browse/MCOL-1039) to set a `DATETIME` column to `CURRENT_TIMESTAMP`.
 + If you want notifications sent to Slack channels, a Slack account
 
 ##<a id='install'></a> Download and Install the PCF Event Alerts Tile
