Add mariadb incompatibility to release notes and install guide
[#163066428]

Signed-off-by: Jeremy Alvis <jalvis@pivotal.io>

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -23,6 +23,7 @@ This release has the following issue:
   `userId@serverName`, you might see an error message saying use of the `@` character is not supported.
   Disregard this message.
   You are still able to authenticate. 
+* MariaDB is not currently supported due to [it not being able](https://jira.mariadb.org/browse/MCOL-1039) to set a `DATETIME` column to `CURRENT_TIMESTAMP`.
 
 ##<a id="ver-1-2-5"></a> v1.2.5
 
@@ -54,7 +55,8 @@ This release has the following issue:
 * When saving the MySQL settings page with Azure-style usernames, for example,
   `userId@serverName`, you might see an error message saying use of the `@` character is not supported.
   Disregard this message.
-  You are still able to authenticate. 
+  You are still able to authenticate.
+* MariaDB is not currently supported due to [it not being able](https://jira.mariadb.org/browse/MCOL-1039) to set a `DATETIME` column to `CURRENT_TIMESTAMP`.
 
 ##<a id="ver-1-2-3"></a> v1.2.3
 
@@ -95,6 +97,7 @@ This release has the following issue:
   You are still able to authenticate.
 * When using PCF Event Alerts and BOSH DNS in conjunction with IPSec Add-On for PCF and an internal database, PCF Event Alerts will not function. This issue is fixed in PCF Event Alerts v1.2.5.
 * The tile version in the tile metadata may not match the version of PCF Event Alerts. These version numbers are aligned as of PCF Event Alerts 1.2.5.
+* MariaDB is not currently supported due to [it not being able](https://jira.mariadb.org/browse/MCOL-1039) to set a `DATETIME` column to `CURRENT_TIMESTAMP`.
 
 ##<a id="ver-1-2-1"></a> v1.2.1
 
@@ -127,6 +130,7 @@ This release has the following issues:
   This issue is fixed in PCF Event Alerts v1.2.1.
 * When using PCF Event Alerts and BOSH DNS in conjunction with IPSec Add-On for PCF and an internal database, PCF Event Alerts will not function. This issue is fixed in PCF Event Alerts v1.2.5.
 * The tile version in the tile metadata may not match the version of PCF Event Alerts. These version numbers are aligned as of PCF Event Alerts 1.2.5.
+* MariaDB is not currently supported due to [it not being able](https://jira.mariadb.org/browse/MCOL-1039) to set a `DATETIME` column to `CURRENT_TIMESTAMP`.
 
 
 ## <a id="view"></a> View Release Notes for Another Version
