--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -12,6 +12,7 @@ You must have the following in order to install PCF Event Alerts:
 
 + PAS v2.1.x or later
 + MySQL for PCF v2.0 or later, or external MySQL credentials
+  + Note: MariaDB is not currently supported due to [it not being able](https://jira.mariadb.org/browse/MCOL-1039) to set a `DATETIME` column to `CURRENT_TIMESTAMP`.
 + If you want notifications sent to Slack channels, a Slack account
 + If you want notifications sent to email addresses, **Email Configuration** must be enabled and configured on the PCF Event Alerts tile
 + Updated and properly configured any BOSH add-ons used in your PCF deployment to support Xenial stemcells. The following add-on versions support the Xenial stemcell:
