Add MySQL compatibility chart and install guide
- MySQL version less than 5.7 does not support multiple triggers for a
single table

[#163075222]

Signed-off-by: Rachel Heaton <rheaton@pivotal.io>

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -56,6 +56,11 @@ The following table provides version and version-support information about PCF E
     <tr>
         <td>Compatible Pivotal Cloud Foundry Healthwatch version(s)</td>
         <td>1.2</td>
+    </tr>
+    <tr>
+        <td>MySQL</td>
+        <td>MySQL 5.7+ or MySQL for PCF v2.0+</td>
+    </tr>
     <tr>
         <td>IaaS support</td>
         <td>AWS, Azure, GCP, OpenStack, and vSphere</td>
