--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -13,7 +13,7 @@ You must have the following in order to install PCF Event Alerts:
 + PAS v2.1.x deployed with the following:
   + `Email Notifications` enabled with SMTP server configured.
   + `Notifications Errand` and `Notifications UI Errand` run.
-+ MySQL for PCF v2 or external MySQL credentials
++ MySQL for PCF v2 or external MySQL (version 5.7+) credentials
   <p class="note"><strong>Note:</strong> You cannot use a MariaDB database because it cannot set a <code>DATETIME</code> column to <code>CURRENT_TIMESTAMP</code>.
   For more information, see <a href="https://jira.mariadb.org/browse/MCOL-1039"> DATE / DATETIME should support CURRENT\_TIMESTAMP</a> the MariaDB ColumnStore issues.</p>
 + If you want notifications sent to Slack channels, a Slack account
