--- a/_mariadb-ki.html.md.erb
+++ b/_mariadb-ki.html.md.erb
@@ -1,2 +1,2 @@
-* **[Known Incompatibility]** MariaDB is not currently supported because it cannot set a <code>DATETIME</code> column to <code>CURRENT_TIMESTAMP</code>.
+* MariaDB is not currently supported because it cannot set a <code>DATETIME</code> column to <code>CURRENT_TIMESTAMP</code>.
 For more information, see <a href="https://jira.mariadb.org/browse/MCOL-1039"> DATE / DATETIME should support CURRENT\_TIMESTAMP</a> the MariaDB ColumnStore issues.
