--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -8,10 +8,12 @@ see [Using PCF Event Alerts](./using.html).
 
 ##<a id='prereqs'></a> Prerequisites
 
+<!-- If the MariaDB issue has not been fixed, add a note under the MySQL for PCF v2 or external MySQL credentials header abour the issue. See 1.2 for example. -->
+
 You must have the following in order to install PCF Event Alerts:
 
 + PAS v2.1.x or later
-+ MySQL for PCF v2.0 or later, or external MySQL credentials
++ MySQL for PCF v2 or external MySQL credentials
 + If you want notifications sent to Slack channels, a Slack account
 + If you want notifications sent to email addresses, **Email Configuration** must be enabled and configured on the PCF Event Alerts tile
 + Updated and properly configured any BOSH add-ons used in your PCF deployment to support Xenial stemcells. The following add-on versions support the Xenial stemcell:
@@ -227,7 +229,3 @@ To install the plugin, do the following:
 ###<a id='uninstalling'></a> Uninstall the Plugin
 
 To uninstall the plugin, run the command `cf uninstall-plugin event-alerts`.
-
-
-
-
