copy PR12 for 1.2 to master[#163075863]

--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -13,7 +13,7 @@ see [Using PCF Event Alerts](./using.html).
 You must have the following in order to install PCF Event Alerts:
 
 + PAS v2.1.x or later
-+ MySQL for PCF v2 or external MySQL credentials
++ MySQL for PCF v2 or credentials for an external MySQL database v5.7 or later
 + If you want notifications sent to Slack channels, a Slack account
 + If you want notifications sent to email addresses, **Email Configuration** must be enabled and configured on the PCF Event Alerts tile
 + Updated and properly configured any BOSH add-ons used in your PCF deployment to support Xenial stemcells. The following add-on versions support the Xenial stemcell:
