--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -58,6 +58,10 @@ The following table provides version and version-support information about PCF E
         <td>v1.3.x</td>
     </tr>
     <tr>
+        <td>MySQL</td>
+        <td>MySQL 5.7 and later or MySQL for PCF v2</td>
+    </tr>
+    <tr>
         <td>IaaS support</td>
         <td>AWS, Azure, GCP, OpenStack, and vSphere</td>
     </tr>
