put pcf product first[#163075863]

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -59,7 +59,7 @@ The following table provides version and version-support information about PCF E
     </tr>
     <tr>
         <td>MySQL</td>
-        <td>MySQL 5.7 and later or MySQL for PCF v2</td>
+        <td>MySQL for PCF v2 or MySQL 5.7 and later</td>
     </tr>
     <tr>
         <td>IaaS support</td>
