Unsubscribe docs don't tell you to subscribe (bug fix)
[#163122051]

Signed-off-by: Rachel Heaton <rheaton@pivotal.io>

--- a/using.html.md.erb
+++ b/using.html.md.erb
@@ -169,7 +169,7 @@ To unsubscribe a target from alert topics, do the following:
 
     For example, to unsubscribe the target `my-email` from the `system.cpu.user` topic from the publisher `healthwatch`, run:<br>
 
-    <pre class="terminal">$ cf eva-subscribe my-email healthwatch --topics system.cpu.user</pre>
+    <pre class="terminal">$ cf eva-unsubscribe my-email healthwatch --topics system.cpu.user</pre>
     
     Or, to unsubscribe the target `my-email` from all topics from the publisher `healthwatch`, run:
 
