--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -15,7 +15,8 @@ You must have the following in order to install PCF Event Alerts:
   + `Notifications Errand` and `Notifications UI Errand` run.
 + MySQL for PCF v2 or credentials for an external MySQL database v5.7 or later
   <p class="note"><strong>Note:</strong> You cannot use a MariaDB database because it cannot set a <code>DATETIME</code> column to <code>CURRENT_TIMESTAMP</code>.
-  For more information, see <a href="https://jira.mariadb.org/browse/MCOL-1039"> DATE / DATETIME should support CURRENT\_TIMESTAMP</a> the MariaDB ColumnStore issues.</p>
+  For more information, see <a href="https://jira.mariadb.org/browse/MCOL-1039"> DATE / DATETIME should support CURRENT\_TIMESTAMP</a>
+  in the MariaDB ColumnStore documentation.</p>
 + If you want notifications sent to Slack channels, a Slack account
 
 ##<a id='install'></a> Download and Install the PCF Event Alerts Tile
