--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -17,7 +17,7 @@ New features and changes in this release:
 
 ### <a id="known126"></a> Known Issues
 
-This release has the following issue:
+This release has the following issues:
 
 * When saving the MySQL settings page with Azure-style usernames, for example,
   `userId@serverName`, you might see an error message saying use of the `@` character is not supported.
