--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -120,7 +120,7 @@ If you want to use an external database for PCF Event Alerts, follow the steps b
       </tr>
       <tr>
         <td><strong>MySQL Host</strong></td>
-        <td>Enter the external MySQL database host address.</td>
+        <td>Enter the external MySQL database hostname/ip address.</td>
       </tr>
       <tr>
         <td><strong>MySQL Port</strong></td>
@@ -143,6 +143,28 @@ If you want to use an external database for PCF Event Alerts, follow the steps b
       <tr>
         <td><strong>MySQL Database</strong></td>
         <td>Enter the external MySQL database name that PCF Event Alerts will use.</td>
+      </tr>
+      <tr>
+        <td><strong>Enable MySQL TLS</strong></td>
+        <td>Check this option if the external MySQL database require TLS or mutual TLS.</td>
+      </tr>
+      <tr>
+        <td><strong>MySQL Server CA Cert</strong></td>
+        <td>Enter the external MySQL database CA certificate. This field is required if the certificate used by the external
+        MySQL database is self-signed, or check Skip MySQL tls validation below to skip hostname validation.</td>
+      </tr>
+      <tr>
+        <td><strong>Skip MySQL tls validation</strong></td>
+        <td>Check this option if no tls hostname validation is desired.
+        <p class="note"><strong>NOTE</strong>: Currently, when Google Cloud Platform SQL with mutual tls is used,
+        this option has to be checked. The certificate on the MySQL server does not contain any IP SANs to validate the server ip
+        address provided.
+        </td>
+      </tr>
+      <tr>
+        <td><strong>MySQL Client Certificate and Private Keys</strong></td>
+        <td>Enter the external MySQL database client certificate and private key.<br>
+        The fields are required if the server requires mutual TLS.</td>
       </tr>
     </table>
 
