ask for leave uesr/pass blank explicitly if smtp no auth used [#165039963]

--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -200,7 +200,9 @@ Follow the steps below to configure settings for Event Alerts email notification
       </tr>  
       <tr>
         <td><strong>SMTP Server Credentials</strong></td>
-        <td>The Username and Password for the outgoing email account.</td>
+        <td>The Username and Password for the outgoing email account.
+        <p class="note"><strong>Note: </strong>In order to connect to a SMTP server without auth, the SMTP username and password fields have to be empty.</p>
+        </td>
       </tr>
     </table>
 
