--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -69,6 +69,7 @@ This release has the following issue:
 New features and changes in this release:
 
 * Added support for SMTP servers without auth. Credentials are no longer required when configuring SMTP server settings.
+  In order to connect to a SMTP server without auth, the SMTP username and password fields have to be empty.
 
 * Escape characters are no longer required in configuration passwords. 
 
